# MindNest

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  assess_query_responses.py  basic_app_with_docs.py  cleanup_docs.py  docker-compose.yml  docker-setup.md  env.example  fix_vectorstore.py  main.py  mindnest_launcher.py  pyproject.toml  query_docs.py  requirements-lightweight.txt  requirements.txt  run.sh  run_direct.py  run_server.py  run_tests.py  setup.py  test_api_integration.py  test_docs.py  test_import.py  test_live.py  test_optimizer.py  test_response_eval.py  test_startup.py  verify_context_optimization.py
_context/: rules.md  rules.txt  specification.md
doc_chunks/: 03_Object_Wrappers_chunk1.json  03_Object_Wrappers_chunk10.json  03_Object_Wrappers_chunk11.json  03_Object_Wrappers_chunk12.json  03_Object_Wrappers_chunk13.json  03_Object_Wrappers_chunk14.json  03_Object_Wrappers_chunk15.json  03_Object_Wrappers_chunk16.json  03_Object_Wrappers_chunk17.json  03_Object_Wrappers_chunk18.json  03_Object_Wrappers_chunk19.json  03_Object_Wrappers_chunk2.json  03_Object_Wrappers_chunk20.json  03_Object_Wrappers_chunk21.json  03_Object_Wrappers_chunk22.json  03_Object_Wrappers_chunk23.json  03_Object_Wrappers_chunk24.json  03_Object_Wrappers_chunk3.json  03_Object_Wrappers_chunk4.json  03_Object_Wrappers_chunk5.json  03_Object_Wrappers_chunk6.json  03_Object_Wrappers_chunk7.json  03_Object_Wrappers_chunk8.json  03_Object_Wrappers_chunk9.json  edi_850_guide_chunk1.json  edi_850_guide_chunk2.json  edi_850_guide_chunk3.json  edi_850_guide_chunk4.json  edi_850_guide_chunk5.json  edi_850_guide_chunk6.json  edi_basics_chunk1.json  edi_basics_chunk2.json  edi_basics_chunk3.json  edi_basics_chunk4.json  edi_integration_patterns_chunk1.json  edi_integration_patterns_chunk2.json  edi_integration_patterns_chunk3.json  edi_integration_patterns_chunk4.json  edi_integration_patterns_chunk5.json  edi_integration_patterns_chunk6.json  (+91 more)
docker/: Dockerfile  docker-compose.yml
docker_chroma_db/: chroma.sqlite3
docs/: MindNest_Documentation.md  README.md  query_classification.md  query_classification_feedback.md  sample-new.md
mindnest/: app.py
release_notes/: environment_update.md  launcher_guide.md  model_switching.md  v1.0.md  v1.1-ai-accuracy-improvements.md  v1.1-release.md  (+2 more)
requirements/: base.txt  (+3 more)
(+111 files in other folders)
