[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindnest"
version = "1.0.0"
description = "An AI-powered documentation Q&A system"
readme = "README.md"
authors = [
    {name = "MindNest Development Team", email = "info@mindnest.example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.1",
    "langchain>=0.0.200",
    "langchain-community>=0.0.5",
    "langchain-huggingface>=0.0.1",
    "llama-cpp-python>=0.1.77",
    "chromadb>=0.4.6",
    "python-dotenv>=1.0.0",
    "pydantic>=1.10.7,<2.0.0",
    "tiktoken>=0.4.0",
    "numpy>=1.24.2",
    "transformers>=4.28.1",
    "torch>=2.0.0",
    "Jinja2>=3.1.2",
    "requests>=2.28.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
    "pre-commit>=3.2.2",
]

[project.urls]
Documentation = "https://github.com/yourusername/MindNest"
Source = "https://github.com/yourusername/MindNest"
"Bug Tracker" = "https://github.com/yourusername/MindNest/issues"

[project.scripts]
mindnest = "mindnest.app:run_server"

[tool.setuptools]
packages = ["mindnest"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "llama_cpp.*",
    "chromadb.*",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py" 